<resources>
    <string name="app_name">BSA Parametros de Operación LB</string>
    <string name="logo_bsa">Logo BSA</string>
    <string name="registro_de_maquinaria">Parametros de Operación Lo Blanco</string>
    <string name="email">Email</string>
    <string name="contrase_a">Contraseña</string>
    <string name="ingresar">Ingresar</string>
    <string name="recuperar_contrase_a">Recuperar Contraseña</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="semaforo">Semaforo</string>
    <string name="usuario">Usuario</string>
    <string name="hora_empty">--:--:--</string>
    <string name="base_de_datos_local">Base de Datos Local</string>
    <string name="env_o_de_alertas">Envío de Alertas</string>
    <string name="salir">Salir</string>
    <string name="title_activity_alerta_config">AlertaConfigActivity</string>
    <string name="listado_de_emails_para_envio_de_alerta">Listado de Emails Para Envio de Alerta</string>
    <string name="nota_separe_por_coma_los_emails_de_la_lista">Nota: Separe Por Coma Los Emails de La Lista.</string>
    <string name="nivel_de_alerta_3">Nivel de Alerta 3</string>
    <string name="nivel_de_alerta_2">Nivel de Alerta 2</string>
    <string name="nivel_de_alerta_1">Nivel de Alerta 1</string>
    <string name="guardar_cambios">Guardar Cambios</string>
    <string name="ingrese_su_email">Ingrese Su Email</string>
    <string name="enviar_codigo_de_recuperaci_n">Enviar Código de Recuperación</string>
    <string name="ingrese_el_c_digo_de_recuperac_on_enviado_a_su_email">Ingrese el Código de Recuperacíon Enviado a su Email</string>
    <string name="c_digo_de_recuperaci_n">Código de Recuperación</string>
    <string name="verificar_c_digo_de_recuperaci_n">Verificar Código de Recuperación</string>
    <string name="ingrese_nueva_contrase_a">Ingrese Nueva Contraseña</string>
    <string name="confirme_nueva_contrase_a">Confirme Nueva Contraseña</string>
    <string name="cambiar_contrase_a">Cambiar Contraseña</string>
    <string name="perfil">Perfil</string>
    <string name="title_activity_config">ConfigActivity</string>
    <string name="ingrese_contrase_a_actual">Ingrese Contraseña Actual</string>
    <string name="formulario">Formulario</string>
    <string name="title_activity_formulario_fill">FormularioFillActivity</string>
    <string name="title_activity_canvas">ActivityCanvas</string>
    <string name="guardar">Guardar</string>
    <string name="borrar">Borrar</string>
    <string name="pendiente_env_o_de_datos">Pendiente Envío de Datos</string>
    <string name="dispositivo_id">ID Dispositivo: ---</string>
    <string name="nueva_ronda">Nueva Ronda</string>
    <string name="ingreso_aislado">Ingreso Aislado</string>
    <string name="hora_de_registro">Hora de Registro</string>
    <string name="justificaci_n">Justificación</string>
    <string name="fecha_ronda">Ronda: --:--:--</string>
    <string name="nivel_de_alerta">Nivel de Alerta:</string>
    <string name="default_r1">---</string>
    <string name="default_r2">----/--/-- --:--:--</string>
    <string name="nro">Nro.</string>
    <string name="fecha_ronda_2">Fecha Ronda</string>
    <string name="fecha_turno">Fecha Turno</string>
</resources>
