<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#ffffff"
    tools:context=".activity.LoginActivity">


    <LinearLayout
        android:id="@+id/loginFormLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/logobsa"
            android:layout_marginTop="30sp"
            android:layout_marginBottom="10sp"
            android:contentDescription="@string/logo_bsa" />

        <TextView
            android:layout_width="match_parent"
            android:gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:text="@string/registro_de_maquinaria"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_marginBottom="20sp"/>

        <ProgressBar
            android:id="@+id/loginProgress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"/>

        <LinearLayout
            android:id="@+id/loginForm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20sp"
            android:layout_marginRight="20sp"
            android:gravity="center_horizontal"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/loginEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:background="#f4f4f4"
                android:layout_marginBottom="20sp"
                tools:ignore="Autofill,LabelFor" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contrase_a"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/loginPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:background="#f4f4f4"
                android:layout_marginBottom="20sp"
                tools:ignore="Autofill,LabelFor" />

            <Button
                android:id="@+id/buttonLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="64sp"
                android:paddingRight="64sp"
                android:onClick="onClick"
                android:background="#efefefef"
                android:textSize="16sp"
                android:text="@string/ingresar"/>

            <Button
                android:id="@+id/buttonRecovery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClick"
                android:layout_marginTop="10sp"
                android:paddingLeft="10sp"
                android:paddingRight="10sp"
                android:background="#ffffff"
                android:textColor="#0000ff"
                android:textSize="12sp"
                android:text="@string/recuperar_contrase_a"/>
        </LinearLayout>
    </LinearLayout>

</ScrollView>