<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.RecuperarCuentaActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recuperar_contrase_a"
            android:textSize="18sp"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="20dp"
            android:textStyle="bold"/>

        <ProgressBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/recovery_loading"
            android:visibility="gone"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/recovery_pass_forms">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:id="@+id/recovery_pass1">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ingrese_su_email"/>

                <EditText
                    android:id="@+id/recovery_email_to_send"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginRight="20dp"
                    android:background="#f7f7f7"
                    android:inputType="textEmailAddress"
                    android:digits="0123456789._-abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ@"
                    tools:ignore="Autofill,LabelFor" />
                <Button
                    android:onClick="onClick"
                    android:id="@+id/recovery_btn_send_code"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="#eeeeee"
                    android:text="@string/enviar_codigo_de_recuperaci_n"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:id="@+id/recovery_pass2">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2sp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:background="#777777"
                    tools:ignore="SmallSp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/ingrese_el_c_digo_de_recuperac_on_enviado_a_su_email"/>


                <TextView
                    android:layout_marginTop="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ingrese_su_email"/>

                <EditText
                    android:id="@+id/recovery_email_to_send_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginRight="20dp"
                    android:background="#f7f7f7"
                    android:inputType="textEmailAddress"
                    android:digits="0123456789._-abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ@"
                    tools:ignore="Autofill,LabelFor" />

                <TextView
                    android:layout_marginTop="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/c_digo_de_recuperaci_n"/>

                <EditText
                    android:id="@+id/recovery_code_verify"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginRight="20dp"
                    android:background="#f7f7f7"
                    android:inputType="numberSigned"
                    android:digits="0123456789"
                    tools:ignore="Autofill,LabelFor" />
                <Button
                    android:onClick="onClick"
                    android:id="@+id/recovery_btn_verify_code"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="#eeeeee"
                    android:text="@string/verificar_c_digo_de_recuperaci_n"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:visibility="gone"
                android:id="@+id/recovery_pass3">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/ingrese_nueva_contrase_a"/>

                <EditText
                    android:id="@+id/recovery_new_pass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginRight="20dp"
                    android:background="#f7f7f7f7"
                    android:inputType="textPassword"
                    tools:ignore="Autofill" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/confirme_nueva_contrase_a"/>

                <EditText
                    android:id="@+id/recovery_new_pass_verify"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginRight="20dp"
                    android:background="#f7f7f7f7"
                    android:inputType="textPassword"
                    tools:ignore="Autofill,LabelFor" />

                <Button
                    android:onClick="onClick"
                    android:id="@+id/recovery_btn_change_pass"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="#eeeeee"
                    android:text="@string/cambiar_contrase_a"/>
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</ScrollView>