<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginTop="?attr/actionBarSize"
    tools:context=".activity.PerfilActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:focusable="true"
        android:layout_marginTop="20sp"
        android:layout_marginBottom="20sp"
        android:focusableInTouchMode="true"
        android:gravity="center_horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:id="@+id/change_pass">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cambiar_contrase_a"
                android:textSize="16sp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/ingrese_contrase_a_actual"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:background="#f7f7f7f7"
                android:inputType="textPassword"
                android:id="@+id/changePassCurrent"
                tools:ignore="Autofill,LabelFor" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/ingrese_nueva_contrase_a"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:background="#f7f7f7f7"
                android:inputType="textPassword"
                android:id="@+id/changePassNew"
                tools:ignore="Autofill,LabelFor" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/confirme_nueva_contrase_a"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:background="#f7f7f7f7"
                android:inputType="textPassword"
                android:id="@+id/changePassNewVerify"
                tools:ignore="Autofill,LabelFor" />

            <Button
                android:id="@+id/buttonChangePass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="#eeeeee"
                android:onClick="onClick"
                android:text="@string/cambiar_contrase_a"/>
        </LinearLayout>

    </LinearLayout>

</ScrollView>